--- a/F_Android安卓原生项目/app/src/main/res/layout/native_page.xml
+++ b/F_Android安卓原生项目/app/src/main/res/layout/native_page.xml
@@ -21,7 +21,7 @@
         android:layout_weight="1"/>
 
     <TextView
-        android:background="@android:color/holo_blue_light"
+        android:background="@android:color/holo_orange_dark"
         android:layout_margin="8.0dp"
         android:padding="8.0dp"
         android:textColor="@android:color/black"
@@ -45,7 +45,7 @@
         android:text="@string/open_flutter" />
 
     <TextView
-        android:background="@android:color/holo_green_dark"
+        android:background="@android:color/holo_orange_dark"
         android:layout_marginLeft="8.0dp"
         android:layout_marginTop="8.0dp"
         android:layout_marginRight="8.0dp"
